unpackaged/main/default/objects/Account/fields/Steep_Roof_Charge_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Steep_Roof_Charge_Pricing__c</fullName>
    <label>Steep Roof Charge Pricing</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>