unpackaged/main/default/objects/Account/fields/Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>Sub_Status__c</fullName>
    <label>Sub-Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Build_Partner_Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Compliance Issue</fullName>
            </value>
            <value>
                <fullName>Do Not Reactivate</fullName>
            </value>
            <value>
                <fullName>Install Issue</fullName>
            </value>
            <value>
                <fullName>Install Quality</fullName>
            </value>
            <value>
                <fullName>Insurance Expired</fullName>
            </value>
            <value>
                <fullName>Jobs Declined</fullName>
            </value>
            <value>
                <fullName>License Expired</fullName>
            </value>
            <value>
                <fullName>No Job Availability</fullName>
            </value>
            <value>
                <fullName>No Show</fullName>
            </value>
            <value>
                <fullName>NPS</fullName>
            </value>
            <value>
                <fullName>Safety Issue</fullName>
            </value>
            <value>
                <fullName>BP Requested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>