unpackaged/main/default/objects/Account/fields/Sum_Adders__c.field-meta.xml
<CustomField>
    <fullName>Sum_Adders__c</fullName>
    <formula>Battery_Pricing__c +  Rafter_Upgrade_Pricing__c +  Steep_Roof_Charge_Pricing__c +  Tile_Pricing__c +  Flat_Roof_Pricing__c +  Ele_Upgrade_Pricing__c +  Ground_Mount_Pricing__c +  ICO_Fee__c +  Trenching_Pricing__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sum Adders</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>