unpackaged/main/default/objects/Account/fields/Tile_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Tile_Pricing__c</fullName>
    <label>Tile Pricing</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>