unpackaged/main/default/objects/Account/fields/Trade_License__c.field-meta.xml
<CustomField>
    <fullName>Trade_License__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trade License</label>
    <type>Checkbox</type>
</CustomField>