unpackaged/main/default/objects/Account/fields/Trenching_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Trenching_Pricing__c</fullName>
    <label>Trenching Pricing</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>