unpackaged/main/default/objects/Account/fields/Vendor_Status__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Status__c</fullName>
    <label>Vendor Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Yet Approved</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Prospective</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>In Retention</fullName>
            </value>
            <value>
                <fullName>Offboarded</fullName>
            </value>
            <value>
                <fullName>Lost Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>