unpackaged/main/default/objects/Account/fields/VendorRecordID__c.field-meta.xml
<CustomField>
    <fullName>VendorRecordID__c</fullName>
    <description>Record ID for the associated Vendor record that is being consolidated back to the Account</description>
    <label>VendorRecordID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>