unpackaged/main/default/objects/Account/fields/Verified__c.field-meta.xml
<CustomField>
    <fullName>Verified__c</fullName>
    <label>Verified</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>