unpackaged/main/default/objects/Account/fields/W9__c.field-meta.xml
<CustomField>
    <fullName>W9__c</fullName>
    <defaultValue>false</defaultValue>
    <label>W9</label>
    <type>Checkbox</type>
</CustomField>