unpackaged/main/default/objects/Account/fields/X18CharacterId__c.field-meta.xml
<CustomField>
    <fullName>X18CharacterId__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>18CharacterId</label>
    <type>Text</type>
</CustomField>