unpackaged/main/default/objects/Account/recordTypes/Build_Only.recordType-meta.xml
<RecordType>
    <fullName>Build_Only</fullName>
    <active>true</active>
    <label>Build Only</label>
</RecordType>