unpackaged/main/default/objects/Account/recordTypes/Build_Partner.recordType-meta.xml
<RecordType>
    <fullName>Build_Partner</fullName>
    <active>true</active>
    <label>Build Partner</label>
</RecordType>