unpackaged/main/default/objects/Account/recordTypes/Business_Development.recordType-meta.xml
<RecordType>
    <fullName>Business_Development</fullName>
    <active>true</active>
    <label>Business Development</label>
</RecordType>