unpackaged/main/default/objects/Account/recordTypes/Commercial_Customer.recordType-meta.xml
<RecordType>
    <fullName>Commercial_Customer</fullName>
    <active>true</active>
    <label>Commercial - Customer</label>
</RecordType>