unpackaged/main/default/objects/Account/recordTypes/GreenNRG_Installation.recordType-meta.xml
<RecordType>
    <fullName>GreenNRG_Installation</fullName>
    <active>true</active>
    <label>GreenNRG - Installation</label>
</RecordType>