unpackaged/main/default/objects/Account/recordTypes/Partner_Sales_Marketing.recordType-meta.xml
<RecordType>
    <fullName>Partner_Sales_Marketing</fullName>
    <active>true</active>
    <label>Partner - Sales/Marketing</label>
</RecordType>