unpackaged/main/default/objects/Account/recordTypes/Residential_Customer.recordType-meta.xml
<RecordType>
    <fullName>Residential_Customer</fullName>
    <active>true</active>
    <label>Residential - Customer</label>
</RecordType>