unpackaged/main/default/objects/Account/recordTypes/Sunrun_Installation.recordType-meta.xml
<RecordType>
    <fullName>Sunrun_Installation</fullName>
    <active>true</active>
    <label>Sunrun Installation</label>
</RecordType>