unpackaged/main/default/objects/Account/recordTypes/X3rd_Party_Contracted_Sale.recordType-meta.xml
<RecordType>
    <fullName>X3rd_Party_Contracted_Sale</fullName>
    <active>true</active>
    <label>3rd Party - Contracted Sales</label>
</RecordType>