unpackaged/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>Channel_Manager__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Sales_Territory__c</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>ACCOUNT.LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>ACCOUNT.LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.ADDRESS1_STATE_CODE</field>
        <operation>equals</operation>
        <value>CA</value>
    </filters>
    <label>All Accounts</label>
</ListView>