unpackaged/main/default/objects/Account/listViews/Build_Only.listView-meta.xml
<ListView>
    <fullName>Build_Only</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Build_Only</value>
    </filters>
    <label>Build Only</label>
</ListView>