unpackaged/main/default/objects/Account/listViews/Build_Partners.listView-meta.xml
<ListView>
    <fullName>Build_Partners</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Sales_Territory__c</columns>
    <columns>Scope_of_Work__c</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>ACCOUNT.LAST_UPDATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Build_Partner</value>
    </filters>
    <label>Build Partners</label>
</ListView>