unpackaged/main/default/objects/Account/listViews/CP_accounts.listView-meta.xml
<ListView>
    <fullName>CP_accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>ACCOUNT.LAST_UPDATE</columns>
    <columns>ACCOUNT.LAST_ACTIVITY</columns>
    <columns>ACCOUNT.ADDRESS1_STREET</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>ACCOUNT.ADDRESS1_ZIP</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Business_Development</value>
    </filters>
    <label>CP accounts</label>
</ListView>