unpackaged/main/default/objects/Account/listViews/Kevin_Desa_Accounts.listView-meta.xml
<ListView>
    <fullName>Kevin_Desa_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SDR__c</field>
        <operation>equals</operation>
        <value>Kevin DeSa</value>
    </filters>
    <filters>
        <field>ACCOUNT.CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2021 12:00 AM</value>
    </filters>
    <label>Kevin Desa Accounts</label>
</ListView>