unpackaged/main/default/objects/Account/listViews/New_Accounts_YTD.listView-meta.xml
<ListView>
    <fullName>New_Accounts_YTD</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>Partner_Manager__c</columns>
    <columns>Channel_Manager__c</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2021 12:00 AM</value>
    </filters>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Business_Development</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>auser</value>
    </filters>
    <label>Unassigned New Accounts</label>
</ListView>