unpackaged/main/default/objects/Account/listViews/Seth_s_Accounts.listView-meta.xml
<ListView>
    <fullName>Seth_s_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER.ALIAS</field>
        <operation>equals</operation>
        <value>sgree</value>
    </filters>
    <label>Seth's Accounts</label>
</ListView>